<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">CriminalIntent</string>
  <string name="crime_title_hint">Enter a title for this crime.</string>
  <string name="crime_title_label">Title</string> 
  <string name="crime_details_label">Details</string> 
  <string name="crime_solved_label">Solved?</string>
  <string name="date_picker_title">Date of crime:</string>
  <string name="crimes_title">Crimes</string>
  <string name="new_crime">New Crime</string>
  <string name="show_subtitle">Show Subtitle</string>
  <string name="hide_subtitle">Hide Subtitle</string> 
  <string name="subtitle">Sometimes tolerance is not a virtue.</string>
  <string name="delete_crime">Delete Crime</string>
  <string name="take">Take!</string>
  <string name="previous_images">PREVIOUS IMAGES</string>
  <string name="delete_all_images">DELETE ALL IMAGES</string>
</resources>
